--- a/starter/public/app/components/books-detail/books-detail.component.html
+++ b/starter/public/app/components/books-detail/books-detail.component.html
@@ -1,3 +1,9 @@
 <div *ngIf="book">
-    <h1>{{ book.name }}</h1>
+    <div class="container-full">
+        <div class="container-image"><img src="{{book.cover}}" /></div>
+        <h1>{{ book.name }}</h1>
+        <br />
+        <strong>Author:</strong> {{ book.author }}<br />
+        <strong>Published Date:</strong> {{ book.publishedDate | customDate }}
+    </div>
 </div>
