--- a/starter/public/app/components/books-list/books-list.component.html
+++ b/starter/public/app/components/books-list/books-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-    <div class="container-panel">
-        <div *ngFor="let book of books">
-            <li><a [routerLink]="['/book', book.id]">{{book.name}}</a></li>
-        </div>
+    <div class="container-panel" *ngFor="let book of books">
+        <div class="container-image"><a [routerLink]="['/book', book.id]"><img src="{{book.cover}}" /></a></div>
+        <a [routerLink]="['/book', book.id]">{{book.name}}</a>
+        <span class="author">{{book.author}}</span>
     </div>
 </div>
